# Agent

./: pyproject.toml  requirements.txt
Agentic_system_in_hands/: Multi_agent_adk.py  Tool_execution_in_langchain.py  multi_agent_with_state_with_output_schema.py  mutli_agent_with_adk_loop_agent.py  parallel_code_in_langchain.py  prompt_chaining_in_langgraph.py  reflection_code_in_langchain.py
Agentic_system_in_hands/memory_management/: tracking_output_key.py  using_tool_context.py
Text2SQl-Agent-with-Long-Term-Memory/: activate_env.bat  env_example.txt  pyproject.toml
